--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/express": "^4.17.21",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2"
